--- a/index.html
+++ b/index.html
@@ -2,44 +2,50 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gêmeo Digital CREA-SE</title>
-  <script src="main.js" defer></script>
+  <script defer src="main.js"></script>
   <style>
     body {
       margin: 0;
       font-family: sans-serif;
       background: #f0f0f0;
     }
+
     #speckle-container {
       width: 100%;
-      height: 75vh;
+      height: 60vh;
       border: none;
-      transition: filter 0.4s ease;
     }
+
     .blinking {
       animation: alertaPisca 1s infinite;
     }
+
     @keyframes alertaPisca {
-      0% { filter: drop-shadow(0 0 0 orange); }
-      50% { filter: drop-shadow(0 0 20px orange); }
+      0%   { filter: drop-shadow(0 0 0 orange); }
+      50%  { filter: drop-shadow(0 0 20px orange); }
       100% { filter: drop-shadow(0 0 0 orange); }
     }
+
     .dashboard {
       display: flex;
-      justify-content: center;
-      gap: 30px;
+      flex-direction: column;
+      align-items: center;
       padding: 20px;
-      background-color: white;
-      box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+      gap: 10px;
     }
+
     .sensor {
       background: #fff;
       border: 1px solid #ccc;
       border-radius: 8px;
       padding: 10px 20px;
+      width: 90%;
       text-align: center;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
+
     .sensor h3 {
       margin-bottom: 5px;
     }
@@ -63,3 +69,4 @@
   </div>
 </body>
 </html>
+
